src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-3.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-3.rs:2:13
   |
LL | fn foo(z: &mut Vec<(&u8,&u8)>, (x, y): (&u8, &u8)) {
   |                     ---                 --- these two types are declared with different lifetimes...
LL |     z.push((x,y));
   |             ^ ...but data flows into `z` here

error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-3.rs:2:15
   |
LL | fn foo(z: &mut Vec<(&u8,&u8)>, (x, y): (&u8, &u8)) {
   |                         ---                  --- these two types are declared with different lifetimes...
LL |     z.push((x,y));
   |               ^ ...but data flows into `z` here

error: aborting due to 2 previous errors

