src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-3.rs
fn foo(z: &mut Vec<(&u8,&u8)>, (x, y): (&u8, &u8)) {
    z.push((x,y)); //~ ERROR lifetime mismatch
    //~^ ERROR lifetime mismatch
}

fn main() { }
